# CrystalMIR

./: .gitignore  LICENSE  README.md  approx_calc.ipynb  calc_crystal_rocking_curve.py  dei_mir.py  dynamic_adjustment.ipynb  filters.py  fit_mir.py  fit_mir_ref.py  gauss.py  io_files.py  ion_chamber.ipynb  main_window.ui  mir_qt.py  multicalc.ipynb  non_recursive_renumber.sh  pearson.py  psvoigt.py  pyproject.toml  recursive_renumber.sh  renumber.ps1  requirements.txt  rocking_curve.ipynb  run_mir_calc.py  run_sample.ipynb  set_settings.ipynb  setup.cfg  setup.py  stitch_images.ipynb  synth_image.ipynb  synth_image_multi.ipynb  test_rc.py
